# crypto_monitor

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: DESIGN.md  NEW_DESIGN.md
docs/plans/: 2026-01-30-crypto-monitor.md  2026-01-31-market-insight.md  2026-02-01-backfill-script-design.md  2026-02-01-backfill-script-impl.md  2026-02-01-binance-refactor-design.md  2026-02-01-binance-refactor-impl.md  2026-02-01-extreme-events-design.md  2026-02-01-extreme-events-impl.md
src/: config.py  main.py
src/aggregator/: event_stats.py  extreme_tracker.py  flow.py  insight.py  liquidation.py  oi.py  percentile.py
src/alert/: insight_trigger.py  price_monitor.py  trigger.py
src/client/: binance.py  models.py
src/collector/: base.py  binance_liq.py  binance_trades.py  event_backfiller.py  indicator_fetcher.py  okx_trades.py
src/notifier/: formatter.py  telegram.py
src/scripts/: backfill_events.py
src/storage/: database.py  models.py
tests/: test_config.py
tests/aggregator/: test_event_stats.py  test_extreme_tracker.py  test_flow.py  test_insight.py  test_liquidation.py  test_oi.py  test_percentile.py
tests/alert/: test_insight_trigger.py  test_price_monitor.py  test_trigger.py
tests/client/: test_binance.py  test_binance_ws.py
tests/collector/: test_binance_liq.py  test_binance_trades.py  test_event_backfiller.py  test_indicator_fetcher.py  test_okx_trades.py
tests/notifier/: test_formatter.py  test_telegram.py
tests/scripts/: test_backfill_events.py
(+12 files in other folders)
